<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sss.carolina.kyrsovaya.ControlActivity"
    android:background="@drawable/background">

    <Button
        android:id="@+id/theFirstControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/theFistClass"
        android:textColor="@android:color/white"
        android:layout_alignLeft="@+id/theSecondControl"
        android:layout_alignStart="@+id/theSecondControl"/>
    <Button
        android:id="@+id/theSecondControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/theSecondClass"
        android:textColor="@android:color/white"
        android:layout_below="@+id/theFirstControl"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/theThirdControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/theThirdClass"
        android:textColor="@android:color/white"
        android:layout_below="@+id/theSecondControl"
        android:layout_alignLeft="@+id/theFirstControl"
        android:layout_alignStart="@+id/theFirstControl"/>
    <Button
        android:id="@+id/theFourthControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/theFourthClass"
        android:textColor="@android:color/white"
        android:layout_below="@+id/theThirdControl"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
