<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_the_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sss.carolina.kyrsovaya.CategotyLessons.TheSecond"
    android:background="@drawable/background">

    <Button
        android:text="@string/number100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/bNumbers100"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white" />

    <Button
        android:text="@string/unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bNumbers100"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:id="@+id/bUnit"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white" />

    <Button
        android:text="@string/sumSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bSumSub"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:layout_below="@+id/bUnit"
        android:layout_marginTop="22dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:text="@string/mulDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bSumSub"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:layout_marginTop="22dp"
        android:id="@+id/bMulDiv" />
</RelativeLayout>
