<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tests"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sss.carolina.kyrsovaya.TestsActivity"
    android:background="@drawable/background">

    <Button
        android:id="@+id/theFirstTestB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:background="@android:color/transparent"
        android:text="@string/theFistClass"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/theThirdTestB"
        android:layout_alignEnd="@+id/theThirdTestB" />

    <Button
        android:id="@+id/theSecondTestB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:text="@string/theSecondClass"
        android:textColor="@android:color/white"
        android:layout_below="@+id/theFirstTestB"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/theThirdTestB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/theThirdClass"
        android:textColor="@android:color/white"
        android:layout_below="@+id/theSecondTestB"
        android:layout_alignLeft="@+id/theSecondTestB"
        android:layout_alignStart="@+id/theSecondTestB"
        android:layout_marginTop="27dp" />

    <Button
        android:id="@+id/theFourthTestB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/theFourthClass"
        android:textColor="@android:color/white"
        android:layout_below="@+id/theThirdTestB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp" />

</RelativeLayout>
