<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_the_fourth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sss.carolina.kyrsovaya.CategotyLessons.TheFourth"
    android:background="@drawable/background">

    <Button
        android:text="@string/decimalDigit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:id="@+id/bDecimal"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white" />

    <Button
        android:text="@string/divCol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bDecimal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:id="@+id/bDivCol"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"/>

    <Button
        android:text="@string/proportion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/bProportion"
        android:layout_below="@+id/bDivCol"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"/>
</RelativeLayout>
