<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.sss.carolina.kyrsovaya.Test.TheTest.DivActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="Правильно ли, что"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="204dp"
            tools:layout_editor_absoluteY="68dp" />

        <TextView
            android:id="@+id/questionsTV7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView13"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonTrue8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trueAnswer"
            android:layout_alignBaseline="@+id/buttonFalse8"
            android:layout_alignBottom="@+id/buttonFalse8"
            android:layout_toLeftOf="@+id/textView13"
            android:layout_toStartOf="@+id/textView13" />

        <Button
            android:id="@+id/buttonFalse8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@+id/buttonTrue8"
            android:layout_toRightOf="@+id/buttonTrue8"
            android:text="@string/enterAns" />

        <TextView
            android:id="@+id/invisibleTV4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="Введите ваш ответ"
            android:textColor="@android:color/white"
            android:visibility="invisible"
            android:layout_alignBaseline="@+id/trueEditText8"
            android:layout_alignBottom="@+id/trueEditText8"
            android:layout_toLeftOf="@+id/nextButton8"
            android:layout_toStartOf="@+id/nextButton8" />

        <EditText
            android:id="@+id/trueEditText8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:visibility="invisible"
            android:layout_below="@+id/buttonFalse8"
            android:layout_toRightOf="@+id/questionsTV7"
            android:layout_toEndOf="@+id/questionsTV7" />

        <ImageButton
            android:id="@+id/nextButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_media_ff"
            android:layout_below="@+id/trueEditText8"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/buttonNoAns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/buttonFalse8"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:layout_toEndOf="@+id/buttonFalse8"
            android:layout_toRightOf="@+id/buttonFalse8"
            android:text="@string/noAnswer" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
